# cloth-simulation

./: .gitignore  CMakeLists.txt  LICENSE  run.sh
src/: LinearAlgebra.h  Timer.h  main.cpp
tool/: render.py
